handling activation 5 minutes
