# docs/swagger.json
@@ -226,6 +226,60 @@
                     }
                 }
             }
+        },
+        "/digisign/step-check": {
+            "post": {
+                "description": "Api Check Step Digisign",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Digisign"
+                ],
+                "parameters": [
+                    {
+                        "description": "Body payload",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.DigisignCheck"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Api"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Api"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "error": {
+                                            "$ref": "#/definitions/response.ErrorValidation"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Api"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -236,6 +290,21 @@
             ],
             "properties": {
                 "email_user": {
+                    "type": "string"
+                },
+                "prospect_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.DigisignCheck": {
+            "type": "object",
+            "required": [
+                "email",
+                "prospect_id"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 },
                 "prospect_id": {
